--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListBySection.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListBySection.cshtml
@@ -28,7 +28,7 @@
 
 @NewRow() 
 
-<div class="@ColumnClass() homepage-sectiune" style="margin-top: 25px; margin-bottom:0px">
+<div class="@ColumnClass() homepage-sectiune">
 	<h3 class="block-title"><span>@paragraphName</span></h3>
 	@if(featuredArticles.Any()) {
 		<text>
