--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
@@ -50,7 +50,7 @@
                        {{#articleAutori}}                         
                           <a href="{{Link}}"><b>{{Name}}</b></a>
                        {{/articleAutori}}
-                       <span style="margin: 0!important;">-</span>                       
+                       <span class="m-0">-</span>                       
                        <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>                        
                         {{#if showItemVisits}}    
                             <span>  -  <i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
@@ -76,7 +76,7 @@
                     {{#articleAutori}}                         
                        <a href="{{Link}}"><b>{{Name}}</b></a>
                     {{/articleAutori}}
-                    <span style="margin: 0!important;">-</span>                     
+                    <span class="m-0">-</span>                     
                     <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>
                         
                    {{#if showItemVisits}}    
