--- a/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
@@ -62,7 +62,7 @@
            
           <div class="featured-header">
             <a  href="{{mainURL}}">
-             <h2 style="color:white;">{{itemTitlu}}</h2>
+             <h2 class="white-font">{{itemTitlu}}</h2>
               <p class="simple-share">
                 @Translate("articolde","de")
                {{#articleAutori}}
@@ -93,7 +93,7 @@
               {{#articleSections}}
                 <span class="category bgcolor5">{{Name}}</span>
               {{/articleSections}}
-              <h2 style="color:white;">{{itemTitlu}}</h2>
+              <h2 class="white-font">{{itemTitlu}}</h2>
               <p class="simple-share">
                  @Translate("articolde","de")
                  {{#articleAutori}}
@@ -123,7 +123,7 @@
                  {{#articleSections}}
                   <span class="category bgcolor4">{{Name}}</span>
                  {{/articleSections}}
-                 <h2 style="color:white;">{{itemTitlu}}</h2>
+                 <h2 class="white-font">{{itemTitlu}}</h2>
                  <p class="simple-share">
                     @Translate("articolde","de")
                     {{#articleAutori}}
