--- a/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-6.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-6.cshtml
@@ -15,7 +15,7 @@
 	}
 }
 <div class="col-md-12 companii-background">
-    <h4><span class="tipcompanie-homepage-tag" style="background-color: #996633;">@GetString("Item.Titlu")</span></h4>
+    <h4><span class="tipcompanie-homepage-tag tipcompanie6">@GetString("Item.Titlu")</span></h4>
      <div class="carousel-companii caruselMarginBottom">
          <div class="owl-carousel owl-companii-2 owl-theme handlebars-wrapper" data-template="CarouselCompanii2Template" data-slides-number="6" data-json-feed="/Default.aspx?ID=@pageId&CompanieID=@companiesIDs">
              @RenderPlaceholderCaruselText();
