--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Parteneri.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Parteneri.cshtml
@@ -13,7 +13,7 @@
 {{#ArticlesContainer}}
    {{#each Article}}
        <div class="item">              
-             <a href="/Default.aspx?ID={{pagePageID}}"><img class="case1" src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=260&Height=100' alt="{{itemTitlu}}" style="max-height: 100px;" /></a>			
+             <a href="/Default.aspx?ID={{pagePageID}}"><img class="case1 img-parteneri" src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=260&Height=100' alt="{{itemTitlu}}" /></a>			
        </div>
     {{/each}}
 {{/ArticlesContainer}}
