--- a/Templates/Designs/TTonline/New_Homepage.cshtml
+++ b/Templates/Designs/TTonline/New_Homepage.cshtml
@@ -32,7 +32,7 @@
 </div>
 </div>
 
-<div class="row main-body shop-background homepage-shop" style="margin-top:-20px!important; padding-bottom: 34px;" data-stickyparent>
+<div class="row main-body shop-background homepage-shop" data-stickyparent>
   <div class="col-md-12">
     <section class="admag-block">
       <div class="row">
@@ -43,7 +43,7 @@
     </section>
   </div>
 </div> 
-<div class="row main-body" data-stickyparent style=" margin-top: -25px;">
+<div class="row main-body main-content-two" data-stickyparent>
   <div class="col-md-8">
     <section class="admag-block">
       <div class="row">
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<div class="row main-body" data-stickyparent  style="margin-top:-12px!important;">
+<div class="row main-body main-content-three" data-stickyparent>
   <div class="col-md-12">
     <section class="admag-block">
       <div class="row">
