--- a/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
@@ -68,7 +68,7 @@ string filterValue8= "Item.Tip='Articole'";
 @Include("Includes/ArticleHelper.cshtml")
 
 
-<div class="row main-body" data-stickyparent style="margin-top: 0px;">
+<div class="row main-body mt-0" data-stickyparent>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <ul class="breadcrumb breadcrumb-sectiune" id="breadCrumbsMenu">
           <ul id="breadCrumbsMenu2" class="dwnavigation" settings="startlevel:1;endlevel:1;template:Breadcrumb.xslt;expandmode:Pathonly;includemode:all;id:breadCrumbsMenu2;"></ul>
@@ -151,7 +151,7 @@ string filterValue8= "Item.Tip='Articole'";
     
     <div class="row">
         <div class="col-xs-12">
-            <h3 class="block-title" style="margin-top:25px!important;"><span>@Translate("Stiri","Stiri")</span></h3>
+            <h3 class="block-title main-content-two"><span>@Translate("Stiri","Stiri")</span></h3>
             <div class="row handlebars-wrapper display-title-up" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&Sections=@sectionID&pagesize=5&type=Stiri">
                 @*Handlebars goes here*@ 
                 @RenderPlaceholderImageOnLeft()
@@ -191,16 +191,16 @@ string filterValue8= "Item.Tip='Articole'";
      </div>
 </div>
 
-<div class="row" style="margin-bottom:20px; margin-top:20px;">
-        <div class="col-xs-12 col-sm-12 col-md-6 text-center" style="margin-bottom:20px; margin-top:20px;"><a href='@Pageview.Area.Item["Link_Catalog"]' alt='@Pageview.Area.Item["Link_Catalog.Name"]'  target="blank"><img src='@Pageview.Area.Item["Banner_Catalog"]'alt='@Pageview.Area.Item["Banner_Catalog.Name"]' /></a></div>
-         <div class="col-xs-12 col-sm-12 col-md-6 text-center" style="margin-bottom:20px; margin-top:20px;"><a href='@Pageview.Area.Item["Link_Companii"]' alt='@Pageview.Area.Item["Link_Companii.Name"]' target="blank"><img src='@Pageview.Area.Item["Banner_Companii"]'alt='@Pageview.Area.Item["Banner_Companii.Name"]' /></a></div>
+<div class="row mb-20 mt-20">
+        <div class="col-xs-12 col-sm-12 col-md-6 text-center mb-20 mt-20" ><a href='@Pageview.Area.Item["Link_Catalog"]' alt='@Pageview.Area.Item["Link_Catalog.Name"]'  target="blank"><img src='@Pageview.Area.Item["Banner_Catalog"]'alt='@Pageview.Area.Item["Banner_Catalog.Name"]' /></a></div>
+         <div class="col-xs-12 col-sm-12 col-md-6 text-center mb-20 mt-20"><a href='@Pageview.Area.Item["Link_Companii"]' alt='@Pageview.Area.Item["Link_Companii.Name"]' target="blank"><img src='@Pageview.Area.Item["Banner_Companii"]'alt='@Pageview.Area.Item["Banner_Companii.Name"]' /></a></div>
  </div>
        
 @*MAIN ARTICLE CONTAINER*@       
 <script id="MainArticleTemplate" type="text/x-handlebars-template">   
    {{#ArticlesContainer}}
         {{#each Article}}       				
-             <article class="news-block big-block" style="margin-bottom:0px;">      
+             <article class="news-block big-block mb-0">      
                <a href="/Default.aspx?ID={{pagePageID}}" class="overlay-link">
                    <figure class="image-overlay proportie-1" style="height: 480.263px;">
                      <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=870&Height=572" alt="{{itemTitlu}}" style="height: 100%;" /> 
@@ -265,9 +265,9 @@ string filterValue8= "Item.Tip='Articole'";
                <p class="simple-share">                  
                  @Translate("articolde","de")
                  {{#articleAutori}}
-                     <span style="margin:0px!important;"><a href="{{Link}}">{{Name}}</a></span>
+                     <span class="m-0"><a href="{{Link}}">{{Name}}</a></span>
                  {{/articleAutori}}                          
-                 <span style="margin: 0 !important;">-</span>                     
+                 <span class="m-0">-</span>                     
                  <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>
                  {{#if showItemVisits}}    
                      <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
@@ -283,7 +283,7 @@ string filterValue8= "Item.Tip='Articole'";
         <ul class="pagination pagination-sm">
             {{#ifCond currentPage "!==" "1"}}
                  <li data-page-link="{{pagingFirstPageLink}}" data-container="LoopArticoleStiriTemplate">                			        
-                    <span style="margin-right: 0.2em"> « </span>                 
+                    <span class="mr-02"> « </span>                 
                  </li>
                  <li data-page-link="{{pagingPrevPageLink}}" data-container="LoopArticoleStiriTemplate">
                     <span aria-label="@Translate("paginaAnterioara", "Pagina anterioara")"><span aria-hidden="true"><i class="fa fa-angle-left"></i></span></span>
@@ -333,10 +333,10 @@ string filterValue8= "Item.Tip='Articole'";
                       <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
                     {{/if}}
                 </p>
-                <h3 style="font-size: 18px; min-height:50px; max-height: 50px; overflow: hidden;">
+                <h3>
                     <a href="/Default.aspx?ID={{pagePageID}}">{{itemTitlu}}</a>
                 </h3>
-                <div class="excerpt" style="min-height:80px; max-height:80px; overflow:hidden;" >{{{itemSumar}}}</div>
+                <div class="excerpt" >{{{itemSumar}}}</div>
              <br/>
             </header>
         </article>        
@@ -349,7 +349,7 @@ string filterValue8= "Item.Tip='Articole'";
    <div class="item"> 
     @if (Dealer == "" && Producator == "")
     {
-        <div class="col-xs-12" style="margin-bottom:15px; margin-top:15px; ">
+        <div class="col-xs-12 margin-15">
       <div class="produs-col-background">      
             <div class="row" >
               <div class="col-xs-12">
@@ -383,21 +383,21 @@ string filterValue8= "Item.Tip='Articole'";
               <h5 class="titlu-produs-lista news-title" ><a href="{{link}}">{{name}}</a></h5>    
             </div>
           </div>    
-        <div class="row" style="min-height:40px;">
+        <div class="row min-height-40">
          <div class="col-xs-12">
                 {{#ifCond manufacturer "!==" ""}}
                   <div class="col-xs-6" >      
-                       <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                       <p class="simple-share manufacturer">
                          <text class="trim-text trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
                        </p>
                   </div>    
                     <div class="col-xs-6">
-                      <p class="simple-share manufacturer"  style="text-align:left; font-size: 12px; line-height: 1.2;">
+                      <p class="simple-share manufacturer">
                        {{#ifCond manufacturerLink "!==" ""}}
-                        <a href="{{manufacturerLink}}"><span style="color:black;">{{manufacturer}}</span></a>
+                        <a href="{{manufacturerLink}}"><span class="black-font">{{manufacturer}}</span></a>
                         {{/ifCond}}   
                         {{#ifCond manufacturerLink "===" ""}}   
-                            <span style="color:black;">{{manufacturer}}</span>
+                            <span class="black-font">{{manufacturer}}</span>
                         {{/ifCond}}
                       </p>
                     </div>
@@ -405,16 +405,16 @@ string filterValue8= "Item.Tip='Articole'";
            </div>
         </div>         
     
-        <div class="row" style="min-height:30px;">
+        <div class="row min-height-30">
           <div class="col-xs-12">
-              <div class="col-xs-6" style="text-align: center;">      
-                   <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+              <div class="col-xs-6 text-center">      
+                   <p class="simple-share manufacturer">
                     <text>@Translate("Furnizor", "Furnizor"):</text>         
                    </p>
                 </div>
-                <div class="col-xs-6" style="text-align: center;">
-                  <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                 <text class="trim-text trim-lines-2" style="color:black;">{{dealerResult}}</text>
+                <div class="col-xs-6 text-center">
+                  <p class="simple-share manufacturer">
+                 <text class="trim-text trim-lines-2 black-font">{{dealerResult}}</text>
                   </p>
                 </div>
            </div>
@@ -436,7 +436,7 @@ string filterValue8= "Item.Tip='Articole'";
                     <div class="modal fade bd-example-modal-sm" id="modalformularoferta1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
                       <div class="modal-dialog modal-sm">
                           <div class="modal-content" >
-                          <button type="button" class="btn btn-primary" data-dismiss="modal" style="float:right!important;">X</button>
+                          <button type="button" class="btn btn-primary float-right" data-dismiss="modal">X</button>
                             @RenderParagraphContent(120)
                           </div>
                       </div>
@@ -447,12 +447,13 @@ string filterValue8= "Item.Tip='Articole'";
               </div>
            </div>
        </div>    
-    </div>
+       </div>
+
     }
     
     @if(Dealer != "" || Producator != ""){
     
-        <div class="col-xs-12 col-sm-3 col-md-3 " style="margin-bottom:15px; margin-top:15px; ">
+        <div class="col-xs-12 col-sm-3 col-md-3 margin-15">
       <div class="produs-col-background">      
             <div class="row" >
               <div class="col-xs-12">
@@ -486,21 +487,21 @@ string filterValue8= "Item.Tip='Articole'";
               <h5 class="titlu-produs-lista news-title"><a href="{{link}}">{{name}}</a></h5>    
             </div>
           </div>    
-         <div class="row" style="min-height:40px;">
+         <div class="row min-height-40">
          <div class="col-xs-12">
                 {{#ifCond manufacturer "!==" ""}}
                   <div class="col-xs-4" >      
-                       <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                       <p class="simple-share manufacturer">
                          <text>@Translate("manufacturer", "Producator"):</text>         
                        </p>
                   </div>    
                     <div class="col-xs-8">
-                      <p class="simple-share manufacturer"  style="text-align:left; font-size: 12px; line-height: 1.2;">
+                      <p class="simple-share manufacturer " >
                        {{#ifCond manufacturerLink "!==" ""}}
-                        <a href="{{manufacturerLink}}"><span style="color:black;">{{manufacturer}}</span></a>
+                        <a href="{{manufacturerLink}}"><span class="black-font">{{manufacturer}}</span></a>
                         {{/ifCond}}
                         {{#ifCond manufacturerLink "===" ""}}
-                            <span style="color:black;">{{manufacturer}}</span>
+                            <span class="black-font">{{manufacturer}}</span>
                             {{/ifCond}}
                                 
                       </p>
@@ -508,16 +509,16 @@ string filterValue8= "Item.Tip='Articole'";
                 {{/ifCond}}
            </div>
         </div>    
-        <div class="row" style="min-height:30px;">
+        <div class="row min-height-30">
           <div class="col-xs-12">
-              <div class="col-xs-3" style="text-align: center;">      
-                   <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+              <div class="col-xs-3 text-center">      
+                   <p class="simple-share manufacturer">
                     <text>@Translate("Furnizor", "Furnizor"):</text>         
                    </p>
                 </div>    
-                <div class="col-xs-9" style="text-align: center;">
-                  <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                 <text style="color:black;">{{dealerResult}}</text>
+                <div class="col-xs-9 text-center">
+                  <p class="simple-share manufacturer">
+                 <text class="black-font">{{dealerResult}}</text>
                   </p>
                 </div>
            </div>
@@ -538,7 +539,7 @@ string filterValue8= "Item.Tip='Articole'";
                   <div class="modal fade bd-example-modal-sm" id="modalformularoferta1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
                       <div class="modal-dialog modal-sm">
                           <div class="modal-content" >
-                          <button type="button" class="btn btn-primary" data-dismiss="modal" style="float:right!important;">X</button>
+                          <button type="button" class="btn btn-primary float-right" data-dismiss="modal">X</button>
                             @RenderParagraphContent(120)
                           </div>
                       
@@ -550,7 +551,8 @@ string filterValue8= "Item.Tip='Articole'";
            </div>
          </div>
       </div>   
-     </div>
+      </div>
+
     }
 
  </div>
