--- a/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
@@ -15,9 +15,9 @@
 }
 <div class="col-md-12 companii-background">
     <h3 class="block-title">
-        <span style="color: #ffa700;">@Translate("industry_directory","Industry Directory")</span>
+        <span>@Translate("industry_directory","Industry Directory")</span>
     </h3>
-    <h4><span class="tipcompanie-homepage-tag" style="background-color: #cc0033;">@GetString("Item.Titlu")</span></h4>
+    <h4><span class="tipcompanie-homepage-tag tipcompanie4">@GetString("Item.Titlu")</span></h4>
     <div class="carousel-companii caruselMarginBottom">
         <div class="owl-carousel owl-companii-1 owl-theme handlebars-wrapper" data-template="CarouselCompanii1Template" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&CompanieID=@companiesIDs">
             @RenderPlaceholderCaruselText()
