--- a/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -37,7 +37,7 @@
 {{#each Product}}
     <div class="item">      
         @if(Dealer == "" && Producator == "") {
-            <div class="col-xs-12" style="margin-bottom:15px; margin-top:15px; ">
+            <div class="col-xs-12 margin-15">
               <div class="produs-col-background">  
                     <div class="row" >
                       <div class="col-xs-12">
@@ -76,21 +76,21 @@
                     </div>
                   </div>
                   
-                <div class="row" style="min-height:40px;">
+                <div class="row min-height-40">
                  <div class="col-xs-12">
                        {{#ifCond manufacturer "!==" ""}}
                           <div class="col-xs-6" >      
-                               <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                               <p class="simple-share manufacturer">
                                  <text class="trim-text trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
                                </p>
                           </div>
                         <div class="col-xs-6">
-                          <p class="simple-share manufacturer"  style="text-align:left; font-size: 12px; line-height: 1.2;">
+                          <p class="simple-share manufacturer">
                            {{#ifCond manufacturerLink "!==" ""}}
-                                <a href="{{manufacturerLink}}"><span style="color:black;">{{manufacturer}}</span></a>
+                                <a href="{{manufacturerLink}}"><span class="black-font">{{manufacturer}}</span></a>
                            {{/ifCond}}
                            {{#ifCond manufacturerLink "===" ""}}
-                                <span style="color:black;">{{manufacturer}} </span>
+                                <span class="black-font">{{manufacturer}} </span>
                            {{/ifCond}}
                           </p>
                         </div>
@@ -98,17 +98,17 @@
                    </div>
                 </div>     
 
-                <div class="row" style="min-height:30px;">
+                <div class="row min-height-30">
                   <div class="col-xs-12">
-                      <div class="col-xs-6" style="text-align: center;">      
-                           <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                      <div class="col-xs-6 text-center">      
+                           <p class="simple-share manufacturer">
                             <text>@Translate("Furnizor", "Furnizor"):</text>         
                            </p>
                         </div>
                       
-                        <div class="col-xs-6" style="text-align: center;">
-                          <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                         <text class="trim-text trim-lines-2" style="color:black;">{{dealerResult}}</text>
+                        <div class="col-xs-6 text-center">
+                          <p class="simple-share manufacturer">
+                         <text class="trim-text trim-lines-2 black-font">{{dealerResult}}</text>
                           </p>
                         </div>
                    </div>
@@ -132,7 +132,7 @@
                               <div class="modal fade bd-example-modal-sm" id="modalformularoferta1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
                                   <div class="modal-dialog modal-sm">
                                       <div class="modal-content" >
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal" style="float:right!important;">X</button>
+                                        <button type="button" class="btn btn-primary float-right" data-dismiss="modal">X</button>
                                         @RenderParagraphContent(120)
                                       </div>
                                       <div class="modal-footer">                            
@@ -147,7 +147,7 @@
         } else {
             if(Dealer != "" || Producator != ""){
 
-            <div class="col-xs-12 col-sm-3 col-md-3 " style="margin-bottom:15px; margin-top:15px; ">
+            <div class="col-xs-12 col-sm-3 col-md-3 margin-15" >
               <div class="produs-col-background">  
                     <div class="row" >
                       <div class="col-xs-12">
@@ -186,21 +186,21 @@
                     </div>
                   </div>
 
-                <div class="row" style="min-height:40px;">
+                <div class="row min-height-40">
                  <div class="col-xs-12">
                         {{#ifCond manufacturer "!==" ""}}
                           <div class="col-xs-4" >      
-                               <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                               <p class="simple-share manufacturer">
                                  <text>@Translate("manufacturer", "Producator"):</text>         
                                </p>
                           </div>     
                         <div class="col-xs-8">
-                          <p class="simple-share manufacturer"  style="text-align:left; font-size: 12px; line-height: 1.2;">
+                          <p class="simple-share manufacturer">
                            {{#ifCond manufacturerLink "!==" ""}}
-                                <a href="{{link}}"><span style="color:black;">{{manufacturer}}</span></a>
+                                <a href="{{link}}"><span class="black-font">{{manufacturer}}</span></a>
                             {{/ifCond}}
                             {{#ifCond manufacturerLink "===" ""}}
-                                <span style="color:black;">{{manufacturer}}</span>
+                                <span class="black-font">{{manufacturer}}</span>
                             {{/ifCond}}
                           </p>
                         </div>
@@ -208,16 +208,16 @@
                    </div>
                 </div>     
 
-                <div class="row" style="min-height:30px;">
+                <div class="row min-height-30">
                   <div class="col-xs-12"> 
-                      <div class="col-xs-3" style="text-align: center;">      
-                           <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
+                      <div class="col-xs-3 text-center">      
+                           <p class="simple-share manufacturer">
                             <text>@Translate("Furnizor", "Furnizor"):</text>         
                            </p>
                         </div>
-                        <div class="col-xs-9" style="text-align: center;">
-                          <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                         <text style="color:black;">{{dealerResult}} </text>
+                        <div class="col-xs-9 text-center">
+                          <p class="simple-share manufacturer">
+                         <text class="black-font">{{dealerResult}} </text>
                           </p>
                         </div>
                    </div>
@@ -240,11 +240,11 @@
                               <div class="modal fade bd-example-modal-sm" id="modalformularoferta1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
                                   <div class="modal-dialog modal-sm">
                                       <div class="modal-content" >
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal" style="float:right!important;">X</button>
+                                        <button type="button" class="btn btn-primary float-right" data-dismiss="modal">X</button>
                                         @RenderParagraphContent(120)
                                       </div>
                                       <div class="modal-footer">
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal" style="float:left!important;">Inchide Formularul</button>
+                                        <button type="button" class="btn btn-primary float-right" data-dismiss="modal">Inchide Formularul</button>
                                       </div>
                                   </div>                      
                               </div>            
