--- a/Templates/Designs/TTonline/Paragraph/New_LoopRevista.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_LoopRevista.cshtml
@@ -38,8 +38,9 @@
 
 <script id="SectiuniRevistaTemplate" type="text/x-handlebars-template">
     {{#each SectionsContainer}}        
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" style="min-height:250px;text-align:center;dispay:block">        
-             <a href="/Default.aspx?ID={{itemId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=300&Height=250' alt="{{itemTitle}}" /></a>               <header>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 sectiune-revista">        
+             <a href="/Default.aspx?ID={{itemId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=300&Height=250' alt="{{itemTitle}}" /></a>               
+             <header>
                  <p><a href="/Default.aspx?ID={{itemId}}">{{itemTitle}}</a></p>
              </header>        				
         </div>
