Last Changes by Marius

--- a/Templates/Designs/TTonline/New_ContentAutor.cshtml
+++ b/Templates/Designs/TTonline/New_ContentAutor.cshtml
@@ -48,11 +48,13 @@
        <div class="row">
           <div class="col-xs-12">
               <div class="handlebars-wrapper" id="LoopAutori" data-template="LoopArticoleTemplate" data-json-feed="@url">
-                  @RenderPlaceholderImageOnLeft()
-                  @RenderPlaceholderImageOnLeft()
-                  @RenderPlaceholderImageOnLeft()
-                  @RenderPlaceholderImageOnLeft()
-                  @RenderPlaceholderImageOnLeft()
+                    <ul class="widget-content">
+                      @RenderPlaceholderImageOnLeft()
+                      @RenderPlaceholderImageOnLeft()
+                      @RenderPlaceholderImageOnLeft()
+                      @RenderPlaceholderImageOnLeft()
+                      @RenderPlaceholderImageOnLeft()
+                    </ul>
               </div>
           </div>
       </div>
