--- a/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
+++ b/Templates/Designs/TTonline/Json/QueryPublisher/Articles.cshtml
@@ -38,6 +38,8 @@
         public string itemSiDespreCompanie {get; set;}
         public int itemSort {get; set;}
         public string itemSumar {get; set;}
+		public string itemContinut {get; set;}
+		public string pdf {get; set;}
         public string[] itemTaguri {get; set;}
         public string[] itemTaguriName {get; set;}
         public string itemTip {get; set;}
@@ -55,6 +57,9 @@
         public int parentLoopIndex {get; set;}
 	    public int sliderCounter { get; set; }
 	    public bool isLast { get; set; }
+		public string autoriCount { get; set; }
+		public bool adserverBanner { get; set; }
+        public bool cereOferta {get; set; }
         
 	    public List<Author> articleAutori {get; set;}
         public List<Section> articleSections {get; set;}
@@ -73,6 +78,7 @@
 		public string Name { get; set; }
 		public string Link { get; set; }
 		public string Id { get; set; }
+		public string Image { get; set; }
 	}
 
 
@@ -212,7 +218,9 @@
 	    articleObject.itemSort = counter; //article.GetInteger("ItemSort");
         var itemSumarRaw = article.GetString("ItemSumar");
 	    articleObject.itemSumar = Regex.Replace(itemSumarRaw, @"[^\u0020-\u007E\u00A0-\u00FF]", string.Empty);
-        string articleExcerpt = article.GetString("ItemSumar") != null ? article.GetString("ItemSumar") : "";
+	    articleObject.itemContinut = article.GetString("ItemContinut");
+	    articleObject.pdf = article.GetString("ItemPDF");
+	    string articleExcerpt = article.GetString("ItemSumar") != null ? article.GetString("ItemSumar") : "";
 	    articleExcerpt = articleExcerpt != "" ? Regex.Replace(articleExcerpt, @"<[^>]*>", String.Empty) : articleExcerpt;
         //articleObject.itemSumar= System.Web.HttpUtility.JavaScriptStringEncode(articleExcerpt);
         articleObject.itemTaguri=(string[])article.GetValue("ItemTaguri");
@@ -232,6 +240,9 @@
         articleObject.parentLoopIndex=article.GetInteger("parentLoopIndex");
 	    articleObject.sliderCounter = counter % 3;
 	    articleObject.isLast = counter == results.Count;
+	    articleObject.autoriCount = articleObject.itemAutori.Count().ToString();
+	    articleObject.adserverBanner = article.GetBoolean("ItemAdserver_Banner");
+        articleObject.cereOferta = article.GetBoolean("ItemCereOferta");
         articleObject.articleAutori = new List<Author>();
         var authorList = articleObject.itemAutori.Zip(articleObject.itemAutoriName, (s, i) => new { sv = s, iv = i }).ToList();
         if (authorList.Any()){
