--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -425,3 +425,7 @@
 .btn-background {
     background-color:#ffa700!important;
 }
+.loop-stiri-figure {
+    min-height: 230px;
+    max-height: 230px;
+}
