--- a/Templates/Designs/TTonline/New_Article.cshtml
+++ b/Templates/Designs/TTonline/New_Article.cshtml
@@ -1,4 +1,4 @@
-@inherits RazorTemplateBase<RazorTemplateModel<Template>>
+﻿@inherits RazorTemplateBase<RazorTemplateModel<Template>>
 @using Dynamicweb.Rendering
 @using Dynamicweb.Content
 @using BrandFusion.Dw.eCommerce
@@ -27,7 +27,6 @@
   var autorPage = GetPageIdByNavigationTag("PaginaAutori").ToString();
   var pageService = new Dynamicweb.Content.PageService();
   var articlesID = pageService.GetPageForItem("Dw_Page", articleID).ID;
-  var titluSectiune = GetString("Item.SectiuneParinteId.Value") == "25" ? Translate("De acelasi autor","De acelasi autor") : Translate("De aceeasi companie","De aceeasi companie");
   var currentPageId = GetInteger("DWPageID");
 }
 
@@ -99,7 +98,7 @@
             <div class="row">
           
               <div class="col-md-6">
-                <h3 class="block-title"><span>@titluSectiune</span></h3>
+                <h3 class="block-title"><span>@Translate("De acelasi autor","De acelasi autor")</span></h3>
                 <div class="row author-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&Excluded=@currentPageId,">
                   <div style="margin-right: 5px">
                     @RenderPlaceholderImageTop("pre-render-element--md")
@@ -211,10 +210,10 @@ s.setAttribute('data-timestamp', +new Date());
                  <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
             {{/if}}
           </p>
-          {{#ifCond itemImaginePrincipala "!==" ""}}
-          <figure class="image-overlay">                     
-            <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&Crop=0&Format=jpg&Width=730&Height=355" alt="{{itemTitlu}}">          
-          </figure>
+           {{#ifCond itemImaginePrincipala "!==" ""}}
+              <figure class="image-overlay">                     
+                <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&Crop=0&Format=jpg&Width=730&Height=355" alt="{{itemTitlu}}">          
+              </figure>
           {{/ifCond}}
        </header><!-- .post-header -->
         <div class="post-content clearfix"> 
@@ -241,17 +240,11 @@ s.setAttribute('data-timestamp', +new Date());
               <div class="share-buttons">                
                 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
                 <div class="addthis_inline_share_toolbox"></div>              
-              </div>
-                {{#ifCond adserverBanner "===" false}}
-                  {{#articleAutori}}
-                      <div class="row row-butoane-articol">
-                        <div class="col-xs-12 col-sm-12"><a href="{{Link}}" class="btn btn-primary btn-background">@Translate("VeziAlteArticoleAleCompanieiAutoare", "Alte articole ale companiei autoare")</a></div>
-                      </div>
-                   {{/articleAutori}}
-                {{/ifCond}}                
+              </div> 
+              <div class="author-section" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&Autor=">
+              </div>                              
             </div>             
-            <div class="author-box clearfix" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&Autor=">
-            </div>                  
+                           
           </footer>
           
     {{/each}}
@@ -273,8 +266,9 @@ s.setAttribute('data-timestamp', +new Date());
 {{/ArticlesContainer}}    
 </script>
 <script id="AuthorsTemplate" type="text/x-handlebars-template">
-  {{#ifCond counterAutori "===" "1"}}
+  {{#ifCond counterAutori "!==" "1"}}
       {{#Autori}}
+      
            {{#ifCond persoana_companie "!==" "Persoana"}}  
               <div class="col-xs-12">
                 <h5>Autori</h5>   
@@ -298,15 +292,25 @@ s.setAttribute('data-timestamp', +new Date());
   {{/ifCond}}
    {{#ifCond counterAutori "===" "1"}}
       {{#Autori}}
-         {{#ifCond persoana_companie "===" "Persoana"}}          
-                 <div class="author-avatar">                   
-                     <img alt="" src="/Admin/Public/GetImage.ashx?Image={{imagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
+         {{#ifCond persoana_companie "===" "Persoana"}}        
+                <div class="row row-butoane-articol">
+                     <div class="col-xs-12 col-sm-12"><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}" class="btn btn-primary btn-background">@Translate("VeziAlteArticoleAleAutorului", "Alte articole ale autorului")</a></div>
+                 </div>  
+                 <div class="author-box clearfix">
+                   <div class="author-avatar">                   
+                       <img alt="" src="/Admin/Public/GetImage.ashx?Image={{imagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=100&Height=150&bgcolor=white" >
+                   </div>
+                   <div class="author-info">
+                     <h3><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}">{{name}}</a></h3>
+                       <p class="author-bio">{{description}}</p>
+                   </div>
                  </div>
-                 <div class="author-info">
-                   <h3><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}">{{name}}</a></h3>
-                     <p class="author-bio">{{description}}</p>
-                 </div>
-          {{/ifCond}}      
+          {{/ifCond}}     
+          {{#ifCond persoana_companie "!==" "Persoana"}}        
+            <div class="row row-butoane-articol">
+                 <div class="col-xs-12 col-sm-12"><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}" class="btn btn-primary btn-background">@Translate("VeziAlteArticoleAleCompanieiAutoare", "Alte articole ale companiei autoare")</a></div>
+             </div>  
+      {{/ifCond}}     
       {{/Autori}}
    {{/ifCond}}
 </script>
