--- a/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
@@ -61,7 +61,7 @@
             </figure>
            
           <div class="featured-header">
-            <a  href="{{mainURL}}">
+            <a  href="/Default.aspx?ID={{pagePageID}}">
              <h2 class="white-font">{{itemTitlu}}</h2>
               <p class="simple-share">
                 @Translate("articolde","de")
@@ -89,7 +89,7 @@
             </figure>
           
             <div class="featured-header">
-              <a href="{{mainURL}}">
+              <a href="/Default.aspx?ID={{pagePageID}}">
               {{#articleSections}}
                 <span class="category bgcolor5">{{Name}}</span>
               {{/articleSections}}
